# rust-axum

./: .env  Cargo.toml  README.md
.github/workflows/: audit-on-push.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
