[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5", features = ["headers"]}
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6" , features = ["runtime-tokio-rustls", "json", "postgres"] }
tower-http = { version = "0.3", features = ["trace", "cors"] }