[package]
name = "backend"
version = "0.1.0"
authors = ["Tim Vaneker <timvaneker@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
axum = { version = "0.6.0-rc.2", features = ["headers"] }
hyper = "0.14"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.3", features = ["trace", "cors"] }
config = "0.13"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "offline",
]


[dev-dependencies]
reqwest = "0.11"
test-case = "2.2"

[dev-dependencies.sqlx]
version = "0.6"
features = ["migrate"]
